--- a/bootstrap_project/src/sass/index.scss
+++ b/bootstrap_project/src/sass/index.scss
@@ -1,1 +1,42 @@
+// Custom.scss
+
+// Include any default variable overrides here (though functions won't be available)
+
+
+// changed default colors
+$blue: #176ef0;
+$indigo: #732ff8;
+$purple: #4f2d8f;
+$pink: #d63384;
+$red: #f54153;
+$orange: #fd7e14;
+$yellow: #ffd452;
+$green: #198754;
+$teal: #20c997;
+$cyan: #0dcaf0;
+
+$gray-800: #343a40;
+
+// theme-color-variables
+$primary: $indigo;
+$secondary: $purple;
+$dark: $gray-800;
+$warning: $yellow;
+
+
 @import "bootstrap/scss/bootstrap";
+
+// Then add additional custom code here
+
+/* ----------------
+        1. flex container
+    ---------------- */
+// flex container that centers the form
+.flex-container {
+    display: flex;
+    align-items: center;
+    height: 100vh;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background-color: #f5f5f5;
+}
