--- a/bootstrap_project/src/sass/index.scss
+++ b/bootstrap_project/src/sass/index.scss
@@ -16,6 +16,8 @@ $teal: #20c997;
 $cyan: #0dcaf0;
 
 $gray-800: #343a40;
+$black: #000000;
+
 
 // theme-color-variables
 $primary: $indigo;
@@ -23,6 +25,12 @@ $secondary: $purple;
 $dark: $gray-800;
 $warning: $yellow;
 
+// $box-shadow: 0 .5rem 1rem rgba($black, .15);
+// $box-shadow-sm: 0 .125rem .25rem rgba($black, .075);
+// $box-shadow-lg: 0 1rem 3rem rgba($black, .175);
+// $box-shadow-inset: inset 0 1px 2px rgba($black, .075);
+
+$box-shadow-lg: 0 .5rem 1rem rgba($black, .28);
 
 @import "bootstrap/scss/bootstrap";
 
@@ -39,4 +47,18 @@ $warning: $yellow;
     padding-top: 40px;
     padding-bottom: 40px;
     background-color: #f5f5f5;
+}
+
+
+
+
+.isbn-container {
+    max-width: 440px;
+}
+
+/* ----------------
+        3. buttons
+    ---------------- */
+.isbn-button {
+    width: 8em;
 }
