feat: add logout page

--- a/django_project/users/templates/users/logout.html
+++ b/django_project/users/templates/users/logout.html
@@ -1,8 +1,8 @@
 {% extends 'library/base.html' %}
-{% load crispy_forms_tags %}
+<!-- {% load crispy_forms_tags %} -->
 {% block content %}
 <div class="flex-container">
-    <div class="form-container container">
+    <div class="container text-center">
         <h2 class="fw-normal mb-4 text-center">
             <svg width="32" height="32" fill="currentColor" class="bi bi-bookmarks" viewbox="0 0 16 16">
                 <path
@@ -12,19 +12,10 @@
             </svg>
             Scroll
         </h2>
-        <form action="" method="POST">
-            {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="pb-3">Create your account</legend>
-                {{ form|crispy }}
-            </fieldset>
-            <div class="d-grid gap-2">
-                <button class="btn btn-primary d-block mb-4" type="submit">Create account</button>
-            </div>
-        </form>
+        <h2 class="text-center mb-4">You are now logged out</h2>
         <div class="border-top pt-2">
-            <small class="text-muted">Already have an account?
-                <a class="ml-2" href="{% url 'login' %}">Sign in</a>
+            <small class="text-muted">
+                <a class="ml-2" href="{% url 'login' %}">Login</a>
             </small>
         </div>
     </div>
