feat: default profile created and image for user

--- a/bootstrap_project/src/sass/index.scss
+++ b/bootstrap_project/src/sass/index.scss
@@ -37,6 +37,16 @@ $box-shadow-lg: 0 .5rem 1rem rgba($black, .28);
 
 // Then add additional custom code here
 
+
+// *{
+//     display: block;
+//     box-sizing: border-box;
+//     margin: 0;
+//     padding: 0;
+// }
+
+
+
 /* ----------------
         1. flex container
     ---------------- */
