--- a/django_project/users/templates/users/profile.html
+++ b/django_project/users/templates/users/profile.html
@@ -1,7 +1,50 @@
 {% extends 'library/base.html' %}
+{% load crispy_forms_tags %}
 {% block content %}
-<h3>Profile page</h3>
-<img class="rounded-circle" height="200" src="{{ user.profile.image.url }}" alt="users image" srcset="">
-<h1 class="text-capitalize">{{ user.username  }}</h1>
-<p class="text-capitalize">{{ user.email  }}</p>
+
+<div class="flex-container">
+    <div class="form-container container">
+
+        <div class="container">
+            <img class="rounded-circle m-4 mx-auto d-block" height="200" src="{{ user.profile.image.url }}"
+                alt="users image" srcset="">
+            <h1 class="text-capitalize text-center mb-2">
+                {{ user.username  }}
+            </h1>
+            <p class="text-center">{{ user.email  }}</p>
+
+        </div>
+
+
+
+
+
+
+        <h2 class="fw-normal mb-4 text-center">
+            <svg width="32" height="32" fill="currentColor" class="bi bi-bookmarks" viewbox="0 0 16 16">
+                <path
+                    d="M2 4a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v11.5a.5.5 0 0 1-.777.416L7 13.101l-4.223 2.815A.5.5 0 0 1 2 15.5V4zm2-1a1 1 0 0 0-1 1v10.566l3.723-2.482a.5.5 0 0 1 .554 0L11 14.566V4a1 1 0 0 0-1-1H4z" />
+                <path
+                    d="M4.268 1H12a1 1 0 0 1 1 1v11.768l.223.148A.5.5 0 0 0 14 13.5V2a2 2 0 0 0-2-2H6a2 2 0 0 0-1.732 1z" />
+            </svg>
+            Scroll
+        </h2>
+        <form action="" method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            <fieldset class="form-group">
+                <legend class="pb-3">Profile Info</legend>
+                {{ u_form|crispy }}
+                {{ p_form|crispy }}
+            </fieldset>
+            <div class="d-grid gap-2">
+                <button class="btn btn-primary d-block mb-4" type="submit">Update</button>
+            </div>
+        </form>
+        <!-- <div class="border-top pt-2">
+            <small class="text-muted">Already have an account?
+                <a class="ml-2" href="{% url 'login' %}">Sign in</a>
+            </small>
+        </div> -->
+    </div>
+</div>
 {% endblock content %}
