--- a/bootstrap_project/src/sass/index.scss
+++ b/bootstrap_project/src/sass/index.scss
@@ -1,60 +1,82 @@
 // Custom.scss
 
+// -------------------------------------------
+    // Bootstrap5 default colors
+// -------------------------------------------
+
+// $blue:    #0d6efd;
+// $indigo:  #6610f2;
+// $purple:  #6f42c1;
+// $pink:    #d63384;
+// $red:     #dc3545;
+// $orange:  #fd7e14;
+// $yellow:  #ffc107;
+// $green:   #198754;
+// $teal:    #20c997;
+// $cyan:    #0dcaf0;
+
+// $primary:       $blue;
+// $secondary:     $gray-600;
+// $success:       $green;
+// $info:          $cyan;
+// $warning:       $yellow;
+// $danger:        $red;
+// $light:         $gray-100;
+// $dark:          $gray-900;
+
+// -------------------------------------------
+
+
+
 // Include any default variable overrides here (though functions won't be available)
 
 
-// changed default colors
-$blue: #176ef0;
-$indigo: #4D5382;
-// $indigo: #b499e9;
-$purple: #4f2d8f;
-$pink: #d63384;
-$red: #f54153;
-$orange: #fd7e14;
-$yellow: #ffd452;
-$green: #198754;
-$teal: #20c997;
-$cyan: #0dcaf0;
+// custom default colors
+
+$purple-d: rgb(151, 21, 123);
+$blue-d: rgb(64, 64, 230);
+$red-d: rgb(212, 109, 41);
+
+$white-d: #ffffff;
+$gray-d: #f4f7fa;
+$dark-d: #313338;
+$black-d: #2c2c2c;
 
 
-
-
-
-
-$gray-800: #343a40;
-$black: #000000;
-
-
-
-$white: #ffffff;
+// $white: #ffffff;
 // $gray-100: #f8f9fa;
 // $gray-200: #e9ecef;
 $gray-300: #dee2e6;
-$gray-400: #ced4da;
+// $gray-400: #ced4da;
 // $gray-500: #adb5bd;
-$gray-600: #6c757d;
+// $gray-600: #6c757d;
 // $gray-700: #495057;
-
+$gray-800: #2e3235;
 // $gray-900: #212529;
 
 
 
+// my theme-color-variables
+$primary: $purple-d;
+$secondary: $blue-d;
+// $success: $green;
+// $info: $cyan;
+$warning: $red-d;
+// $danger: $red;
+// $light: $gray-100;
+$gray: $gray-d;
+$dark: $dark-d;
+$white: $white-d;
+$black: $black-d; 
 
-// theme-color-variables
-$primary: $indigo;
-$secondary: $purple;
 
-$warning: $yellow;
-
-$gray: $gray-300;
-$dark: $gray-800;
 
 // $box-shadow: 0 .5rem 1rem rgba($black, .15);
 // $box-shadow-sm: 0 .125rem .25rem rgba($black, .075);
 // $box-shadow-lg: 0 1rem 3rem rgba($black, .175);
 // $box-shadow-inset: inset 0 1px 2px rgba($black, .075);
 
-$box-shadow-lg: 0 .5rem 1rem rgba($black, .28);
+// $box-shadow-lg: 0 .5rem 1rem rgba($black, .28);
 
 @import "bootstrap/scss/bootstrap";
 
@@ -69,12 +91,6 @@ $box-shadow-lg: 0 .5rem 1rem rgba($black, .28);
 // }
 
 
-
-.beta {
-    color: $yellow-300;
-    background-color: $indigo-900;
-  }
-
 /* ----------------
         1. flex container
     ---------------- */
@@ -86,7 +102,7 @@ $box-shadow-lg: 0 .5rem 1rem rgba($black, .28);
     height: calc(100vh - 56px);
     padding-top: 40px;
     padding-bottom: 40px;
-    background-color: #f7f7f7;
+    background-color: #faf9fa;
 }
 
 
