--- a/django_project/users/templates/users/register.html
+++ b/django_project/users/templates/users/register.html
@@ -1,8 +1,8 @@
 {% extends 'library/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="flex-container">
-    <div class="form-container container">
+<div class="flex-container px-3" style="min-height: 800px;">
+    <div class="container form-container col-md-6 col-lg-4" style="max-width: 560px;">
         <h2 class="fw-normal mb-4 text-center">
             <svg width="32" height="32" fill="currentColor" class="bi bi-bookmarks" viewbox="0 0 16 16">
                 <path
