--- a/django_project/users/templates/users/login.html
+++ b/django_project/users/templates/users/login.html
@@ -1,8 +1,8 @@
 {% extends 'library/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="flex-container">
-    <div class="form-container container">
+<div class="flex-container px-3" style="min-height: 540px;">
+    <div class="container form-container col-md-6 col-lg-4" style="max-width: 560px;">
         <h2 class="fw-normal mb-4 text-center">
             <svg width="32" height="32" fill="currentColor" class="bi bi-bookmarks" viewbox="0 0 16 16">
                 <path
@@ -12,16 +12,27 @@
             </svg>
             Scroll
         </h2>
-        <form action="" method="POST">
+        <form class="" action="" method="POST">
             {% csrf_token %}
-            <fieldset class="form-group">
+            <fieldset class="form-group my-4">
                 <legend class="pb-3">Please sign in</legend>
                 {{ form|crispy }}
             </fieldset>
-            <div class="d-grid gap-2">
+            <div class="d-grid my-2">
                 <button class="btn btn-primary mb-4" type="submit">Sign in</button>
             </div>
         </form>
+
+
+        <!-- <div class="form-row">
+                <div class="form-group">
+                    {{ form.username|as_crispy_field }}
+                </div>
+            </div> -->
+
+
+
+
         <div class="border-top pt-2">
             <small class="text-muted">Need an account?
                 <a class="ml-2" href="{% url 'register' %}">Register</a>
