--- a/django_project/users/templates/users/edit_profile.html
+++ b/django_project/users/templates/users/edit_profile.html
@@ -26,11 +26,16 @@
             Scroll
         </h2> -->
         <form action="" method="POST" enctype="multipart/form-data">
+
+
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="pb-3">Profile Info</legend>
-                {{ u_form|crispy }}
-                {{ p_form|crispy }}
+
+                <!-- {{ user_form|crispy }} -->
+                {{ user_form.email|as_crispy_field }}
+
+                {{ profile_form|crispy }}
             </fieldset>
             <div class="d-grid gap-2 mt-2">
                 <button class="btn btn-primary d-block d-md-inline mb-4" type="submit">Update</button>
