--- a/django_project/users/templates/users/logout.html
+++ b/django_project/users/templates/users/logout.html
@@ -1,19 +1,18 @@
 {% extends 'library/base.html' %}
+{% load static %}
+
 <!-- {% load crispy_forms_tags %} -->
 {% block content %}
 <div class="flex-container">
-    <div class="container text-center">
-        <h2 class="fw-normal mb-4 text-center">
-            <svg width="32" height="32" fill="currentColor" class="bi bi-bookmarks" viewbox="0 0 16 16">
-                <path
-                    d="M2 4a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v11.5a.5.5 0 0 1-.777.416L7 13.101l-4.223 2.815A.5.5 0 0 1 2 15.5V4zm2-1a1 1 0 0 0-1 1v10.566l3.723-2.482a.5.5 0 0 1 .554 0L11 14.566V4a1 1 0 0 0-1-1H4z" />
-                <path
-                    d="M4.268 1H12a1 1 0 0 1 1 1v11.768l.223.148A.5.5 0 0 0 14 13.5V2a2 2 0 0 0-2-2H6a2 2 0 0 0-1.732 1z" />
-            </svg>
-            Scroll
+    <div class="d-flex flex-column align-items-center container text-center">
+        <h2 class="mb-4">
+            <a class="d-flex align-items-center navbar-brand" href="">
+                <img class="me-2" height="62" src="{% static 'library/images/logo_dark.svg' %}" alt="image of logo">
+                Tech<span class="fw-bold">Blog</span>
+            </a>
         </h2>
-        <h2 class="text-center mb-4">You are now logged out</h2>
-        <div class="border-top pt-2">
+        <h2 class="text-center mb-2 pb-4 border-bottom">You are now logged out</h2>
+        <div class="">
             <small class="text-muted">
                 <a class="ml-2" href="{% url 'login' %}">Login</a>
             </small>
