--- a/django_project/users/templates/users/register.html
+++ b/django_project/users/templates/users/register.html
@@ -1,17 +1,14 @@
 {% extends 'library/base.html' %}
+{% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="flex-container px-3" style="min-height: 800px;">
     <div class="container form-container col-md-6 col-lg-4" style="max-width: 560px;">
-        <h2 class="fw-normal mb-4 text-center">
-            <svg width="32" height="32" fill="currentColor" class="bi bi-bookmarks" viewbox="0 0 16 16">
-                <path
-                    d="M2 4a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v11.5a.5.5 0 0 1-.777.416L7 13.101l-4.223 2.815A.5.5 0 0 1 2 15.5V4zm2-1a1 1 0 0 0-1 1v10.566l3.723-2.482a.5.5 0 0 1 .554 0L11 14.566V4a1 1 0 0 0-1-1H4z" />
-                <path
-                    d="M4.268 1H12a1 1 0 0 1 1 1v11.768l.223.148A.5.5 0 0 0 14 13.5V2a2 2 0 0 0-2-2H6a2 2 0 0 0-1.732 1z" />
-            </svg>
-            Scroll
-        </h2>
+        <h3 class="mb-4 d-flex align-items-center" href="">
+            <img class="me-2" height="48" src="{% static 'library/images/logo_dark.svg' %}" alt="image of logo">
+            Tech<span class="fw-bold">Blog</span>
+
+        </h3>
         <form action="" method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
@@ -22,7 +19,7 @@
                 <button class="btn btn-primary d-block mb-4" type="submit">Create account</button>
             </div>
         </form>
-        <div class="border-top pt-2">
+        <div class="border-top mt-2 pt-2">
             <small class="text-muted">Already have an account?
                 <a class="ml-2" href="{% url 'login' %}">Sign in</a>
             </small>
