fix: comment section indented and content

--- a/django_project/users/templates/users/register.html
+++ b/django_project/users/templates/users/register.html
@@ -15,10 +15,12 @@
                 <legend class="pb-3">Create your account</legend>
                 {{ form|crispy }}
             </fieldset>
-            <div class="d-grid gap-2">
-                <button class="btn btn-primary d-block mb-4" type="submit">Create account</button>
+            <div class="d-grid mt-3">
+                <button class="btn btn-primary mb-4" type="submit">Create account</button>
             </div>
         </form>
+
+
         <div class="border-top mt-2 pt-2">
             <small class="text-muted">Already have an account?
                 <a class="ml-2" href="{% url 'login' %}">Sign in</a>
