--- a/django_project/users/templates/users/edit_profile.html
+++ b/django_project/users/templates/users/edit_profile.html
@@ -2,9 +2,9 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
+<!-- BUG: image upload doesn't work, image wont upload -->
 <div class="px-3" style="min-height: 540px;">
     <div class="container form-container col-md-8 col-lg-6" style="max-width: 660px;">
-
         <div class="p-3">
             <img class="rounded-circle m-4 mx-auto d-block" height="200" src="{{ user.profile.image.url }}"
                 alt="users image" srcset="">
@@ -15,19 +15,7 @@
 
         </div>
 
-
-        <!-- <h2 class="fw-normal mb-4 text-center">
-            <svg width="32" height="32" fill="currentColor" class="bi bi-bookmarks" viewbox="0 0 16 16">
-                <path
-                    d="M2 4a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v11.5a.5.5 0 0 1-.777.416L7 13.101l-4.223 2.815A.5.5 0 0 1 2 15.5V4zm2-1a1 1 0 0 0-1 1v10.566l3.723-2.482a.5.5 0 0 1 .554 0L11 14.566V4a1 1 0 0 0-1-1H4z" />
-                <path
-                    d="M4.268 1H12a1 1 0 0 1 1 1v11.768l.223.148A.5.5 0 0 0 14 13.5V2a2 2 0 0 0-2-2H6a2 2 0 0 0-1.732 1z" />
-            </svg>
-            Scroll
-        </h2> -->
         <form action="" method="POST" enctype="multipart/form-data">
-
-
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="pb-3">Profile Info</legend>
