--- a/django_project/users/templates/users/login.html
+++ b/django_project/users/templates/users/login.html
@@ -30,7 +30,7 @@
 
         <div class="border-top mt-2 pt-2">
             <small class="text-muted">Need an account?
-                <a class="ml-2" href="{% url 'register' %}">Register</a>
+                <a class="ml-2 text-dark" href="{% url 'register' %}">Register</a>
             </small>
         </div>
     </div>
