--- a/django_project/users/templates/users/register.html
+++ b/django_project/users/templates/users/register.html
@@ -23,7 +23,7 @@
 
         <div class="border-top mt-2 pt-2">
             <small class="text-muted">Already have an account?
-                <a class="ml-2" href="{% url 'login' %}">Sign in</a>
+                <a class="ml-2 text-dark" href="{% url 'login' %}">Sign in</a>
             </small>
         </div>
     </div>
