--- a/django_project/users/templates/users/login.html
+++ b/django_project/users/templates/users/login.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="flex-container px-3" style="min-height: 540px;">
+<div class="flex-container px-3 gray-bg" style="min-height: 520px;">
     <div class="container form-container col-md-6 col-lg-4" style="max-width: 560px;">
         <h3 class="mb-4 d-flex align-items-center" href="">
             <img class="me-2" height="48" src="{% static 'library/images/logo_dark.svg' %}" alt="image of logo">
@@ -30,7 +30,7 @@
 
         <div class="border-top mt-2 pt-2">
             <small class="text-muted">Need an account?
-                <a class="ml-2 text-dark" href="{% url 'register' %}">Register</a>
+                <a class="ml-2" href="{% url 'register' %}">Register</a>
             </small>
         </div>
     </div>
