--- a/django_project/users/templates/users/logout.html
+++ b/django_project/users/templates/users/logout.html
@@ -3,17 +3,17 @@
 
 <!-- {% load crispy_forms_tags %} -->
 {% block content %}
-<div class="flex-container">
+<div class="flex-container gray-bg" style="min-height: 260px;">
     <div class="d-flex flex-column align-items-center container text-center">
         <h2 class="mb-4">
-            <a class="d-flex align-items-center navbar-brand" href="">
+            <div class="d-flex align-items-center navbar-brand">
                 <img class="me-2" height="62" src="{% static 'library/images/logo_dark.svg' %}" alt="image of logo">
                 Tech<span class="fw-bold">Blog</span>
-            </a>
+            </div>
         </h2>
         <h2 class="text-center mb-2 pb-4 border-bottom">You are now logged out</h2>
         <div class="">
-            <small class="text-muted">
+            <small class="">
                 <a class="ml-2" href="{% url 'login' %}">Login</a>
             </small>
         </div>
