style: gray background and padding on all page

--- a/bootstrap_project/src/sass/index.scss
+++ b/bootstrap_project/src/sass/index.scss
@@ -17,6 +17,13 @@ $primary: rgb(54, 59, 75);
     --link-hover: rgb(218, 45, 189);
 }
 
+.flex-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 60px);
+}
+
 a {
     color: var(--link);
 }
@@ -38,9 +45,10 @@ a:hover {
     padding-left: 88px;
 }
 
-.flex-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: calc(100vh - 60px);
+.new-post-btn {
+    // border-color: var(--light-gray);
+}
+
+.new-post-btn:hover {
+    border-color: var(--light-gray);
 }
