--- a/django_project/users/templates/users/register.html
+++ b/django_project/users/templates/users/register.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="gray-bg px-3 mt-5" style="min-height: 860px;">
+<div class="flex-container gray-bg px-3 py-5 pb-3" style="min-height: 860px;">
     <div class="container form-container col-md-6 col-lg-4" style="max-width: 560px;">
         <h3 class="mb-4 d-flex align-items-center" href="">
             <img class="me-2" height="48" src="{% static 'library/images/logo_dark.svg' %}" alt="image of logo">
