--- a/django_project/users/templates/users/login.html
+++ b/django_project/users/templates/users/login.html
@@ -15,12 +15,12 @@
                 {{ form|crispy }}
             </fieldset>
             <div class="d-grid my-3">
-                <button class="btn btn-primary mb-3" type="submit">Sign in</button>
+                <button class="btn btn-primary mb-3 fw-semibold" type="submit">Sign in</button>
             </div>
         </form>
         <div class="border-top mt-2 pt-2">
             <small class="text-muted">Need an account?
-                <a class="ml-2" href="{% url 'register' %}">Register</a>
+                <a class="ml-2 fw-semibold" href="{% url 'register' %}">Register</a>
             </small>
         </div>
     </main>
