--- a/django_project/users/templates/users/logout.html
+++ b/django_project/users/templates/users/logout.html
@@ -12,7 +12,7 @@
         <h2 class="text-center mb-2 pb-4 border-bottom">You are now logged out</h2>
         <div class="">
             <small class="">
-                <a class="ml-2" href="{% url 'login' %}">Login</a>
+                <a class="ml-2 fw-semibold" href="{% url 'login' %}">Login</a>
             </small>
         </div>
     </main>
