--- a/django_project/users/templates/users/register.html
+++ b/django_project/users/templates/users/register.html
@@ -15,14 +15,14 @@
                 {{ form|crispy }}
             </fieldset>
             <div class="d-grid mt-3">
-                <button class="btn btn-primary mb-4" type="submit">Create account</button>
+                <button class="btn btn-primary mb-4 fw-semibold" type="submit">Create account</button>
             </div>
         </form>
 
 
         <div class="border-top mt-2 pt-2">
             <small class="text-muted">Already have an account?
-                <a class="ml-2" href="{% url 'login' %}">Sign in</a>
+                <a class="ml-2 fw-semibold" href="{% url 'login' %}">Sign in</a>
             </small>
         </div>
     </main>
