feat: upload files to AWS remove local static file

--- a/bootstrap_project/src/sass/index.scss
+++ b/bootstrap_project/src/sass/index.scss
@@ -96,6 +96,11 @@ a:hover {
 /* the background color is changed here because when changed
 in the custom-simpleMDE.css, simpleMDE pre background gets overwritten */
 pre {
-    background-color: #e2e2df;
     border-radius: 3px;
+    background-color: #e2e2df;
+}
+.bio {
+    max-width: 560px;
+    border-radius: 3px;
+    background-color: var(--light-gray);
 }
