--- a/django_project/django_project/users/templates/users/edit_profile.html
+++ b/django_project/django_project/users/templates/users/edit_profile.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="px-3" style="min-height: 540px;">
-    <main class="container form-container col-md-8 col-lg-6" style="max-width: 660px;">
+    <main class="container form-container col-md-8 col-lg-6">
         <section class="p-3">
             <img class="rounded-circle m-4 mx-auto d-block" height="200" src="{{ user.profile.image.url }}"
                 alt="users image" srcset="">
@@ -12,7 +12,6 @@
             <p class="text-center">{{ user.email }}</p>
 
         </section>
-
         <form action="" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <fieldset class="form-group">
@@ -22,7 +21,7 @@
                 {{ profile_form|crispy }}
 
             </fieldset>
-            <div class="d-grid gap-2 mt-2">
+            <div class="d-grid gap-2 mt-2 col-12 col-md-6 col-lg-4">
                 <button class="btn btn-primary d-block d-md-inline mb-4" type="submit">Update</button>
             </div>
         </form>
