--- a/django_project/django_project/users/templates/users/register.html
+++ b/django_project/django_project/users/templates/users/register.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="flex-container gray-bg px-3 py-5 pb-3" style="min-height: 860px;">
-    <main class="container form-container col-md-6 col-lg-4" style="max-width: 560px;">
+    <main class="container form-container form-max-width col-md-6 col-lg-4">
         <h3 class="mb-4 d-flex align-items-center" href="">
             <img class="me-2" height="48" src="{% static 'library/images/logo_dark.svg' %}" alt="image of logo">
             Tech<span class="fw-bold">Blog</span>
