--- a/frontend-bootstrap/src/sass/index.scss
+++ b/frontend-bootstrap/src/sass/index.scss
@@ -1,18 +1,11 @@
 // --------------------------------------
 //  Google fonts
-// --------------------------------------
-// JetBrainsMono
-@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600;800&display=swap");
-// Red Hat Mono
-@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Mono:ital,wght@0,400;0,700;1,400&display=swap");
-// Poppins
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;0,700;1,400&display=swap");
-// Ubuntu
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,400;1,700&display=swap");
-
+// -------------------------------------------------------------------------------------------------------------------
+// JetBrains Mono
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600;700&display=swap");
 // Noto Sans
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600&display=swap");
-// --------------------------------------
+// -------------------------------------------------------------------------------------------------------------------
 
 // --------------------------------------
 //  changing the default colors
@@ -45,6 +38,13 @@ $btn-border-radius-lg: 0.4rem;
     --light-gray: #f9fafb;
     --link: #3e7ab6;
     --link-hover: #2c6196;
+}
+
+h1,
+h2,
+h3,
+.navbar-brand-text {
+    font-family: "JetBrains Mono", monospace;
 }
 
 .flex-container {
